--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation xd'
+description: 'Welcome to the home of your new documentation'
 ---
 
 <img
