--- a/Square.mdx
+++ b/Square.mdx
@@ -9,6 +9,7 @@ description: 'Guide to setting up Square as a sales channel.'
   alt="Squareup"
 />
 <img
+  console.log("hola")
   className="hidden dark:block"
   src="/images/white-logo.png"
   alt="Infinity Logo"
