--- a/Square.mdx
+++ b/Square.mdx
@@ -9,7 +9,6 @@ description: 'Guide to setting up Square as a sales channel.'
   alt="Squareup"
 />
 <img
-  console.log("hola")
   className="hidden dark:block"
   src="/images/white-logo.png"
   alt="Infinity Logo"
@@ -17,24 +16,9 @@ description: 'Guide to setting up Square as a sales channel.'
 
 <p>Integrating Square as a sales channel for your store in Infinity simplifies the creation of a website and the implementation of your e-commerce, as well as automatically synchronizing inventories and prices, reflecting changes in real time in your Square store. This connection provides efficient management, ensuring that all sales operations, both online and physical, are perfectly aligned and optimized.</p>
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+<h2>What is Square?</h2>
 
-## Make it yours
+## What is Square?
 
 Update your docs to your brand and add valuable content for the best user conversion.
 
