--- a/Square.mdx
+++ b/Square.mdx
@@ -18,9 +18,9 @@ description: 'Guide to setting up Square as a sales channel.'
 
 <h2>What is Square?</h2>
 
-## What is Square?
-
-Update your docs to your brand and add valuable content for the best user conversion.
+<p>Square is an easy to use platform that offers advanced payment processing solutions and the creation of e-commerce websites. Known for its simplicity and efficiency, it allows businesses of any size to manage both physical and online sales on a single platform. Square facilitates the creation of online stores with tools that support adaptable design, inventory management, and secure payment options, optimizing the user experience and operational efficiency. Its integration of marketing and analytics tools helps maximize business visibility and growth.</p>
+<br>
+<p>With this in mind, let's understand how the setup process for this sales channel works on our platform. Follow the steps below to correctly configure this setting:</p>
 
 <CardGroup cols={2}>
   <Card
