--- a/Square.mdx
+++ b/Square.mdx
@@ -16,7 +16,7 @@ description: 'Guide to setting up Square as a sales channel.'
 
 <p>Integrating Square as a sales channel for your store in Infinity simplifies the creation of a website and the implementation of your e-commerce, as well as automatically synchronizing inventories and prices, reflecting changes in real time in your Square store. This connection provides efficient management, ensuring that all sales operations, both online and physical, are perfectly aligned and optimized.</p>
 
-<h2>What is Square?</h2>
+## Make it yours
 
 <p>Square is an easy to use platform that offers advanced payment processing solutions and the creation of e-commerce websites. Known for its simplicity and efficiency, it allows businesses of any size to manage both physical and online sales on a single platform. Square facilitates the creation of online stores with tools that support adaptable design, inventory management, and secure payment options, optimizing the user experience and operational efficiency. Its integration of marketing and analytics tools helps maximize business visibility and growth.</p>
 <br>
