--- a/integrations/square.mdx
+++ b/integrations/square.mdx
@@ -46,3 +46,5 @@ To set up Square in Infinity, you only need four credentials from your store in 
 <p>For this, there are two credentials 'Location ID' and 'Physical location ID', being the first (Location ID), the 'virtual warehouse' of your products in Square, in charge of sending data from Infinity to Square, and the second (Physical location ID) the actual physical location of your store from which data from Square will be received into the inventory of your products in Infinity.</p>
 <p>Keep this in mind when setting up your locations in Square, as you will need these two locations previously created in your Square account, as although they are two different credentials in Infinity, you will obtain these credentials from Square from the ID of each location, which we will explain later.</p>
 <p>Thanks to this, you benefit from centralized management before any update in the inventories of your products automatically, whether with digital inventories with our integration with distributors, or with the physical inventories of your products in your store, all this in a centralized way in your products managed in Infinity.</p>
+
+<h3>With this clear, let's continue with the explanation to obtain the last three missing credentials for this configuration.</h3>
