--- a/integrations/square.mdx
+++ b/integrations/square.mdx
@@ -7,12 +7,12 @@ description: 'Guide to setting up Square as a sales channel.'
 
 Integrating Square as a sales channel for your store in Infinity simplifies the creation of a website and the implementation of your e-commerce, as well as automatically synchronizing inventories and prices, reflecting changes in real time in your Square store. This connection provides efficient management, ensuring that all sales operations, both online and physical, are perfectly aligned and optimized.
 
-## What is Square?
+<h2>What is Square?</h2>
 
 Square is an easy to use platform that offers advanced payment processing solutions and the creation of e-commerce websites. Known for its simplicity and efficiency, it allows businesses of any size to manage both physical and online sales on a single platform. Square facilitates the creation of online stores with tools that support adaptable design, inventory management, and secure payment options, optimizing the user experience and operational efficiency. Its integration of marketing and analytics tools helps maximize business visibility and growth.<br>
 With this in mind, let's understand how the setup process for this sales channel works on our platform. Follow the steps below to correctly configure this setting:
 
-## First step: Access your store in Square
+<h2>First step: Access your store in Square</h2>
 
 To connect your store in Square with your store in Infinity, the first step is to have a store created in this sales channel. In the following links, you can access the creation or login of your store in Square:
 
@@ -23,7 +23,7 @@ To connect your store in Square with your store in Infinity, the first step is t
 
 Once you have a store in Square, we can move on to the next step to learn the credentials you need to make the connection between your store in Square and your store in Infinity.
 
-## Second step: Obtain your store's credentials
+<h2>Second step: Obtain your store's credentials</h2>
 
 To set up Square in Infinity, you only need four credentials from your store in Square (Access Token, Location ID, Physical Location ID, Tax ID). Below, we explain the steps to follow to obtain each of these fields correctly.
 
