--- a/integrations/square.mdx
+++ b/integrations/square.mdx
@@ -21,4 +21,4 @@ To connect your store in Square with your store in Infinity, the first step is t
     <li>On the other hand, if you already have a store in Square, enter the following link to access your store.</li>
 </ul>
 
-Once you have a store in Square, we can move on to the next step to learn the credentials you need to make the connection between your store in Square and your store in Infinitys.
+Once you have a store in Square, we can move on to the next step to learn the credentials you need to make the connection between your store in Square and your store in Infinityss.
