--- a/integrations/square.mdx
+++ b/integrations/square.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Set up integration with Square'
+title: 'Set up integration with Square xd'
 description: 'Guide to setting up Square as a sales channel.'
 ---
 
