--- a/integrations/square.mdx
+++ b/integrations/square.mdx
@@ -5,22 +5,35 @@ description: 'Guide to setting up Square as a sales channel.'
 
 ![Image](/images/squareup.png)
 
-Integrating Square as a sales channel for your store in Infinity simplifies the creation of a website and the implementation of your e-commerce, as well as automatically synchronizing inventories and prices, reflecting changes in real time in your Square store. This connection provides efficient management, ensuring that all sales operations, both online and physical, are perfectly aligned and optimized.
-
+<p>Integrating Square as a sales channel for your store in Infinity simplifies the creation of a website and the implementation of your e-commerce, as well as automatically synchronizing inventories and prices, reflecting changes in real time in your Square store. This connection provides efficient management, ensuring that all sales operations, both online and physical, are perfectly aligned and optimized.</p>
+ 
 <h2>What is Square?</h2>
 
-Square is an easy to use platform that offers advanced payment processing solutions and the creation of e-commerce websites. Known for its simplicity and efficiency, it allows businesses of any size to manage both physical and online sales on a single platform. Square facilitates the creation of online stores with tools that support adaptable design, inventory management, and secure payment options, optimizing the user experience and operational efficiency. Its integration of marketing and analytics tools helps maximize business visibility and growth.<br>
-With this in mind, let's understand how the setup process for this sales channel works on our platform. Follow the steps below to correctly configure this setting:
+<p>Square is an easy to use platform that offers advanced payment processing solutions and the creation of e-commerce websites. Known for its simplicity and efficiency, it allows businesses of any size to manage both physical and online sales on a single platform. Square facilitates the creation of online stores with tools that support adaptable design, inventory management, and secure payment options, optimizing the user experience and operational efficiency. Its integration of marketing and analytics tools helps maximize business visibility and growth.</p><br>
+<p>With this in mind, let's understand how the setup process for this sales channel works on our platform. Follow the steps below to correctly configure this setting:</p>
 
 <h2>First step: Access your store in Square</h2>
 
-To connect your store in Square with your store in Infinity, the first step is to have a store created in this sales channel. In the following links, you can access the creation or login of your store in Square:
+<p>To connect your store in Square with your store in Infinity, the first step is to have a store created in this sales channel. In the following links, you can access the creation or login of your store in Square:</p>
 
-Once you have a store in Square, we can move on to the next step to learn the credentials you need to make the connection between your store in Square and your store in Infinityss.
+<p>Once you have a store in Square, we can move on to the next step to learn the credentials you need to make the connection between your store in Square and your store in Infinityss.</p>
 
 <h2>Second step: Obtain your store's credentials</h2>
 
-To set up Square in Infinity, you only need four credentials from your store in Square (Access Token, Location ID, Physical Location ID, Tax ID). Below, we explain the steps to follow to obtain each of these fields correctly.
+<p>To set up Square in Infinity, you only need four credentials from your store in Square (Access Token, Location ID, Physical Location ID, Tax ID). Below, we explain the steps to follow to obtain each of these fields correctly.</p>
+
+<ol>
+    <li>Primarily, once you have your store created in Square, go to the following link to access the Square Dev page to correctly extract the 'Access Token' credential from your account.</li>
+    <li>Once in the Dashboard, the next step is to create the app through which you will establish the connection by selecting the '+' button.</li>
+    <li>You will see a popup window where you should name the app to be created; in this case, you can call it 'Infinity' and select 'Next'.</li>
+    <li>In the next step, you can manage the purpose of this connection; in this case, for Infinity, you should only select 'Manage a product catalog' and choose 'Next'.</li>
+    <li>In the following step, you can select the purpose of this app, whether for personal use or as a service. At this point, you can select the use that corresponds to your company.</li>
+    <li>After selecting 'Complete', your app will be correctly created, and you will be redirected to the data of this connection where you can obtain the API credentials of this connection.</li>
+    <li>To obtain the 'Access Token' for the configuration on our platform, you will find this credential in the 'Credentials' section of the left menu.</li>
+    <li>In this section, in the upper central part, you should change the mode from 'Sandbox' to 'Production,' as these are the credentials that really work for the connection.</li>
+    <li>With this, in the second field called 'Production Access token,' you will find the 'Access token' credential you will use in the configuration of Square on our platform.</li>
+    <li>The following credentials will be obtained from the main page of your store in Square, which you can access at the following link.</li>
+</ol>
 
 <h3>Before continuing with the extraction of the credentials, keep in mind the following:</h3>
 
