--- a/integrations/square.mdx
+++ b/integrations/square.mdx
@@ -17,11 +17,17 @@ With this in mind, let's understand how the setup process for this sales channel
 
 To connect your store in Square with your store in Infinity, the first step is to have a store created in this sales channel. In the following links, you can access the creation or login of your store in Square:
 
+- If you currently do not have a store created in Square, enter the following link to create one quickly.
+- On the other hand, if you already have a store in Square, enter the following link to access your store.
+
 Once you have a store in Square, we can move on to the next step to learn the credentials you need to make the connection between your store in Square and your store in Infinityss.
 
 ## Second step: Obtain your store's credentials
 
 To set up Square in Infinity, you only need four credentials from your store in Square (Access Token, Location ID, Physical Location ID, Tax ID). Below, we explain the steps to follow to obtain each of these fields correctly.
+
+1. Primarily, once you have your store created in Square, go to the following link to access the Square Dev page to correctly extract the 'Access Token' credential from your account.
+2. Once in the Dashboard, the next step is to create the app through which you will establish the connection by selecting the '+' button.
 
 ## Before continuing with the extraction of the credentials, keep in mind the following:
 
