--- a/integrations/square.mdx
+++ b/integrations/square.mdx
@@ -29,11 +29,14 @@ To set up Square in Infinity, you only need four credentials from your store in 
 1. Primarily, once you have your store created in Square, go to the following link to access the Square Dev page to correctly extract the 'Access Token' credential from your account.
 2. Once in the Dashboard, the next step is to create the app through which you will establish the connection by selecting the '+' button.
 
-## Before continuing with the extraction of the credentials, keep in mind the following:
+### Before continuing with the extraction of the credentials, keep in mind the following:
 
 In Infinity, thanks to Square's inventory management system, we implement two types of data connections: one to send inventory and product cost data from Infinity thanks to our connection with distributors to the products managed in Square, and another to receive cost and inventory data from Square in case your company handles physical locations and inventories for your store.
+
 For this, there are two credentials 'Location ID' and 'Physical location ID', being the first (Location ID), the 'virtual warehouse' of your products in Square, in charge of sending data from Infinity to Square, and the second (Physical location ID) the actual physical location of your store from which data from Square will be received into the inventory of your products in Infinity.
+
 Keep this in mind when setting up your locations in Square, as you will need these two locations previously created in your Square account, as although they are two different credentials in Infinity, you will obtain these credentials from Square from the ID of each location, which we will explain later.
+
 Thanks to this, you benefit from centralized management before any update in the inventories of your products automatically, whether with digital inventories with our integration with distributors, or with the physical inventories of your products in your store, all this in a centralized way in your products managed in Infinity.
 
-## With this clear, let's continue with the explanation to obtain the last three missing credentials for this configuration.
+### With this clear, let's continue with the explanation to obtain the last three missing credentials for this configuration.
