--- a/integrations/square.mdx
+++ b/integrations/square.mdx
@@ -27,7 +27,25 @@ Once you have a store in Square, we can move on to the next step to learn the cr
 To set up Square in Infinity, you only need four credentials from your store in Square (Access Token, Location ID, Physical Location ID, Tax ID). Below, we explain the steps to follow to obtain each of these fields correctly.
 
 1. Primarily, once you have your store created in Square, go to the following link to access the Square Dev page to correctly extract the 'Access Token' credential from your account.
+
 2. Once in the Dashboard, the next step is to create the app through which you will establish the connection by selecting the '+' button.
+
+3. You will see a popup window where you should name the app to be created; in this case, you can call it 'Infinity' and select 'Next'.
+
+4. In the next step, you can manage the purpose of this connection; in this case, for Infinity, you should only select 'Manage a product catalog' and choose 'Next'.
+
+5. In the following step, you can select the purpose of this app, whether for personal use or as a service. At this point, you can select the use that corresponds to your company.
+
+6. After selecting 'Complete', your app will be correctly created, and you will be redirected to the data of this connection where you can obtain the API credentials of this connection.
+
+7. To obtain the 'Access Token' for the configuration on our platform, you will find this credential in the 'Credentials' section of the left menu.
+
+8. In this section, in the upper central part, you should change the mode from 'Sandbox' to 'Production,' as these are the credentials that really work for the connection.
+
+9. With this, in the second field called 'Production Access token,' you will find the 'Access token' credential you will use in the configuration of Square on our platform.
+
+10. The following credentials will be obtained from the main page of your store in Square, which you can access at the following link.
+
 
 ### Before continuing with the extraction of the credentials, keep in mind the following:
 
@@ -40,3 +58,37 @@ Keep this in mind when setting up your locations in Square, as you will need the
 Thanks to this, you benefit from centralized management before any update in the inventories of your products automatically, whether with digital inventories with our integration with distributors, or with the physical inventories of your products in your store, all this in a centralized way in your products managed in Infinity.
 
 ### With this clear, let's continue with the explanation to obtain the last three missing credentials for this configuration.
+
+1. Once in your account in Square, select your store in the upper right corner and enter the 'Account settings' option.
+
+2. In your account settings, select 'Business information' from the left menu.
+
+3. For both 'Location ID' and 'Physical location ID,' select 'Locations' among the different options in 'Business information'.
+
+4. Within your locations, you must click on the one you want to extract the ID from. Doing so will open the location settings and in its URL, after 'locations/' you will have the ID of the location you will need for the configuration in Infinity.
+
+5. Remember to take into account what was previously explained and use the ID of your virtual location created for Infinity in 'Location ID' and the ID of the physical location of your store in 'Physical location ID'.
+
+6. Finally, to obtain the 'Tax ID', similarly in the 'Business information' section of the left menu, go to the 'Sales taxes' option, where you will find the tax settings defined for your store. If you have not created one, you can do so by entering that page.
+
+7. Having created a 'Sales taxes,' click on it and the URL will update with the ID of this setting. This ID is the one you will use in the 'Tax ID' field of the configuration of Square on our platform.
+
+With these four credentials, you will have everything you need to perform the integration of your store in Square with your store in Infinity. In the next step, we will explain how you can make this configuration on our platform.
+
+## Third step: Set up the connection in Infinity
+
+To configure this integration, you must access the channel administration page on our platform. To do this, enter the 'Channels' option in the left menu of our platform.
+
+Once in this list, you must locate the integration with Square and select the 'Edit' button to configure this sales channel in your store.
+
+Once on the configuration page of this sales channel, you must enter the credentials obtained from your store in Square and complete all the fields mentioned above for the setup on our platform and enable the connection on the first option called 'Enabled?'.
+
+After completing all the fields you see in this configuration and saving the changes, you will have the connection between your store in Square and your products in Infinity correctly established.
+
+## Considerations
+
+Keep in mind that these connections have specific functionalities regarding the publication and update of your products' data in each sales channel, so we suggest you review our article 'Integrations with sales channels' to correctly understand how these integrations work.
+
+## In conclusion
+
+By connecting Square with your store in Infinity, you simplify the integration process and significantly improve the management of inventories and prices of your products. This connection minimizes manual errors and also improves workflows, allowing for a more fluid and accurate operation.
