--- a/integrations/square.mdx
+++ b/integrations/square.mdx
@@ -47,7 +47,9 @@ To set up Square in Infinity, you only need four credentials from your store in 
 10. The following credentials will be obtained from the main page of your store in Square, which you can access at the following link.
 
 
-### Before continuing with the extraction of the credentials, keep in mind the following:
+### Considerations before continue
+
+Before continuing with the extraction of the credentials, keep in mind the following:
 
 In Infinity, thanks to Square's inventory management system, we implement two types of data connections: one to send inventory and product cost data from Infinity thanks to our connection with distributors to the products managed in Square, and another to receive cost and inventory data from Square in case your company handles physical locations and inventories for your store.
 
@@ -57,7 +59,9 @@ Keep this in mind when setting up your locations in Square, as you will need the
 
 Thanks to this, you benefit from centralized management before any update in the inventories of your products automatically, whether with digital inventories with our integration with distributors, or with the physical inventories of your products in your store, all this in a centralized way in your products managed in Infinity.
 
-### With this clear, let's continue with the explanation to obtain the last three missing credentials for this configuration.
+### Let's continue with the extraction
+
+With this clear, let's continue with the explanation to obtain the last three missing credentials for this configuration.
 
 1. Once in your account in Square, select your store in the upper right corner and enter the 'Account settings' option.
 
