--- a/integrations/square.mdx
+++ b/integrations/square.mdx
@@ -1,9 +1,7 @@
 ---
-title: 'Set up integration with Square xd'
+title: 'Set up integration with Square'
 description: 'Guide to setting up Square as a sales channel.'
 ---
-
-![Image](/images/squareup.png)
 
 Integrating Square as a sales channel for your store in Infinity simplifies the creation of a website and the implementation of your e-commerce, as well as automatically synchronizing inventories and prices, reflecting changes in real time in your Square store. This connection provides efficient management, ensuring that all sales operations, both online and physical, are perfectly aligned and optimized.
  
