--- a/integrations/square.mdx
+++ b/integrations/square.mdx
@@ -13,10 +13,10 @@ With this in mind, let's understand how the setup process for this sales channel
 
 ## First step: Access your store in Square
 
-To connect your store in Square with your store in Infinity, the first step is to have a store created in this sales channel. In the following links, you can access the creation or login of your store in Square:
+To connect your store in [Square](https://squareup.com/us/en) with your store in Infinity, the first step is to have a store created in this sales channel. In the following links, you can access the creation or login of your store in Square:
 
-- If you currently do not have a store created in Square, enter the following link to create one quickly.
-- On the other hand, if you already have a store in Square, enter the following link to access your store.
+- If you currently do not have a store created in Square, enter the [following link](https://squareup.com/signup/en-US) to create one quickly.
+- On the other hand, if you already have a store in Square, enter the [following link](https://squareup.com/login?lang_code=en-us) to access your store.
 
 Once you have a store in Square, we can move on to the next step to learn the credentials you need to make the connection between your store in Square and your store in Infinityss.
 
