--- a/integrations/square.mdx
+++ b/integrations/square.mdx
@@ -25,7 +25,7 @@ Once you have a store in Square, we can move on to the next step to learn the cr
 To set up Square in Infinity, you only need four credentials from your store in Square (Access Token, Location ID, Physical Location ID, Tax ID). Below, we explain the steps to follow to obtain each of these fields correctly.
 
 1. Primarily, once you have your store created in Square, go to the following link to access the Square Dev page to correctly extract the 'Access Token' credential from your account.
-![SquareFirstStep](/images/Square_Images/Second step#1.png)
+![square](images/square_images/secondStep1.png)
 
 
 2. Once in the Dashboard, the next step is to create the app through which you will establish the connection by selecting the '+' button.
