--- a/integrations/square.mdx
+++ b/integrations/square.mdx
@@ -22,7 +22,7 @@ Once you have a store in Square, we can move on to the next step to learn the cr
 
 ## Second step: Obtain your store's credentials
 
-To set up Square in Infinity, you only need four credentials from your store in Square (Access Token, Location ID, Physical Location ID, Tax ID). Below, we explain the steps to follow to obtain each of these fields correctly.
+To set up Square in Infinity, you only need four credentials from your store in Square (**Access Token**, **Location ID**, **Physical Location ID**, **Tax ID**). Below, we explain the steps to follow to obtain each of these fields correctly.
 
 1. Primarily, once you have your store created in Square, go to the following link to access the Square Dev page to correctly extract the **'Access Token'** credential from your account.
 ![Image](/images/square_images/secondStep1.png)
@@ -60,7 +60,7 @@ Before continuing with the extraction of the credentials, keep in mind the follo
 
 In Infinity, thanks to Square's inventory management system, we implement two types of data connections: one to send inventory and product cost data from Infinity thanks to our connection with distributors to the products managed in Square, and another to receive cost and inventory data from Square in case your company handles physical locations and inventories for your store.
 
-For this, there are two credentials **'Location ID'** and **'Physical location ID'**, being the first (Location ID), the **'virtual warehouse'** of your products in Square, in charge of sending data from Infinity to Square, and the second (Physical location ID) the actual physical location of your store from which data from Square will be received into the inventory of your products in Infinity.
+For this, there are two credentials **'Location ID'** and **'Physical location ID'**, being the first (**Location ID**), the **'virtual warehouse'** of your products in Square, in charge of sending data from Infinity to Square, and the second (**Physical location ID**) the actual physical location of your store from which data from Square will be received into the inventory of your products in Infinity.
 
 Keep this in mind when setting up your locations in Square, as you will need these two locations previously created in your Square account, as although they are two different credentials in Infinity, you will obtain these credentials from Square from the ID of each location, which we will explain later.
 
