--- a/integrations/channels/salesChannels.mdx
+++ b/integrations/channels/salesChannels.mdx
@@ -1,8 +1,26 @@
 ---
-title: 'Set up integration with Square'
-description: 'Guide to setting up Square as a sales channel.'
+title: 'Integrations with sales channels'
+description: 'Learn how to integrate your store with your sales channels.'
 ---
 
-Integrating Square as a sales channel for your store in Infinity simplifies the creation of a website and the implementation of your e-commerce, as well as automatically synchronizing inventories and prices, reflecting changes in real time in your Square store. This connection provides efficient management, ensuring that all sales operations, both online and physical, are perfectly aligned and optimized.
+Our integrations with sales channels allow you to keep your products up to date automatically against any change in their information, prices, or inventories on our platform. This optimizes the updating of them on each of your sales channels. In this article, we will explain how each of our integrations with sales channels works and how to configure them.
  
-## What is Square?
+## How to access to the channels integrations on Infinity
+
+Firstly, it's important for you to know that to access the configuration of the sales channels, you must go to the menu on the left side of our platform. There you will find the option 'Channels' under the 'Administration' section, where all the currently active sales channels on our platform are listed.
+
+To configure and activate each of these sales channels, our platform will reflect in its configuration the specific fields you need to complete to establish the connection between your store and your data on our platform.
+
+It's worth noting that each integration requires different credentials for its connection. You can easily obtain this data on each platform, and we recommend reviewing their respective documentation to facilitate your connection processes.
+
+## Key aspects for connecting your products to your sales channels
+
+For sales channels related to marketplaces, it is crucial that your products in your store on each marketplace and on our platform have the same SKUs. This, along with the connection configuration with your store, establishes the linking standards between both products for their updates.
+
+For sales channels related to e-commerce, based on our workflow by stages, all your products will be automatically published on your website once they reach the 'Completed' stage. This publication of your products will work automatically along with the configuration of said e-commerce. Moreover, you will need to define in your e-commerce the product data fields that we will have on our platform so that they are correctly reflected on your website.
+
+To delve into how each of these integrations works and how to configure them on our platform, we suggest you review the 'Integrations' section on our main page. There you will find a 'learn more' link for each of our integrations with sales channels. If you access it, you will be able to see in detail how they work and how they can be configured on our platform.
+
+## In conclusion
+
+Integration with sales channels is a vital component in the efficient management of your products on each of the platforms where your brand is present. On our platform, these integrations are designed to ensure that your products are always correctly presented and updated on each platform, facilitating effective inventory management and improving the shopping experience for your customers.
