--- a/gettingStarted/quickstart.mdx
+++ b/gettingStarted/quickstart.mdx
@@ -1,86 +1,41 @@
 ---
 title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+description: 'Discover essential tips for getting started with our platform.'
 ---
 
-## Setup your development
+To understand how our platform can adapt to your business model and to what extent your store could benefit from implementing our functionalities for the management and automation of your products, this article highlights the main steps we suggest following when implementing Infinity. This includes initial considerations and the different functions to be carried out during the first steps on the platform.
 
-Learn how to update your docs locally and and deploy them to the public.
+## Evaluate your business needs
 
-### Edit and preview
+To better understand the solutions that our platform can offer your company, we suggest reviewing in detail the content available on our website. There, we detail all the functionalities, connections, integrations, and tools that Infinity offers. This way, you can consider all the possible benefits that implementing our platform could have for your store.
 
-<AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `mint.json` is): ``` mintlify dev ```
-  </Accordion>
-</AccordionGroup>
+We also recommend reviewing our documentation, where you'll find all the functions explained, what they offer, and how they work for your store on our platform. It's useful to review the documentation on integrations with distributors, connections with sales channels, and our **'Repricer'** function, which are the main pillars of our platform.
 
-### Deploy your changes
+## Create your account and get your free trial
 
-<AccordionGroup>
+The best way to test if Infinity is suitable for your business is by experimenting with all the functionalities it offers. Therefore, Infinity provides a 14-day free trial for new users. This trial gives you unlimited access to all functionalities, allowing you to validate how our integrated solutions work at no cost.
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
+For more information on how to create an account and the subscriptions, we invite you to review the article **'How to create an account'** within our documentation.
 
-</AccordionGroup>
+### Essential actions to start
 
-## Update your docs
+For an initial setup of your store on our platform, we suggest performing the following actions:
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+- **Configuration of Data Sources:** In the menu on the left, under **'Data Sources'**, you will find the option **'Manage'**. This functionality allows you to configure the connection with your distributors to connect their products with those of your store. For more information on how these distributors work, how to configure them, or how to request a new one, check out the article **'How to setup a data source?'** in our documentation.
+- **Create and configure your stores:** Infinity allows you to have all the stores you need for your organization without limits. You can edit the stores created when opening your account and create as many as you require. Each store operates independently, allowing you to manage various data between them without connection or transfer of information.
+- **Invite collaborators to your stores:** If you have a team responsible for developing your products' data, you can invite them to join and familiarize themselves with Infinity's ecosystem. This can be easily done in the users section, where you'll find a button to invite people to your organization and assign specific stores and roles. For more information on how the roles and user invitation work, review the articles **'Invite new users'** and **'User management'**.
+- **Initial customization of the store:** Once the above is implemented, we recommend defining the profit percentage for the products in your store and familiarizing yourself with our import system. This system allows you to import all the necessary data for your products, such as brands, categories, attributes, or the products themselves, using optimized templates easily and straightforwardly. To better understand how it works, check out our article **'Imports and exports'**.
 
-<CardGroup>
+## Import your first products
 
-<Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
-  Add flair to your docs with personalized branding.
-</Card>
+After familiarizing yourself with our import and export portal, the next step is to import your first products. We suggest starting with the brands and categories, since you'll need the IDs of these to correctly import your products. Once these data are imported, you can export them, and our platform will provide you with the necessary ID for the product import template.
 
-<Card
-  title="Add API Endpoints"
-  icon="square-code"
-  href="/api-playground/configuration"
->
-  Implement your OpenAPI spec and enable API user interaction.
-</Card>
+With the template ready, you can download it, which includes a detailed guide on how to develop each product to be imported into our platform by completing the fields in our template. For more details, we invite you to review the article **'Imports and exports'**.
 
-<Card
-  title="Integrate Analytics"
-  icon="chart-mixed"
-  href="/analytics/supported-integrations"
->
-  Draw insights from user interactions with your documentation.
-</Card>
+## Finalizing the setup
 
-<Card
-  title="Host on a Custom Domain"
-  icon="browser"
-  href="/settings/custom-domain/subdomain"
->
-  Keep your docs on your own website's subdomain.
-</Card>
+Having completed these steps, you can perfectly test everything that Infinity can offer for your business. You'll be able to verify the connection with your distributors, enrich the data of your products, understand how the connections with your sales channels work, and explore many other possibilities. Remember, by creating an account at Infinity, you'll have a 14-day free trial, offering you complete access to all functionalities without limitations.
 
-</CardGroup>
+## Final overview
+
+Starting with our platform requires careful planning and consideration of your business needs. Exploring our platform and setting up your store, brands, categories, and integrations in detail are fundamental steps. This initial investment of time and effort is vital for effective product information management and to optimize e-commerce operations.
