--- a/gettingStarted/introduction.mdx
+++ b/gettingStarted/introduction.mdx
@@ -4,17 +4,11 @@ description: 'Welcome to the home of your new documentation xd xd'
 ---
 
 <img
-  className="block dark:hidden"
-  src="/images/test.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
+  src="/images/introduction_images/introduction1.svg"
+  alt="Infinity Dashboard"
 />
 
-## Setting up xd
+## Setting up
 
 The first step to world-class documentation is setting up your editing environments.
 
