--- a/gettingStarted/introduction.mdx
+++ b/gettingStarted/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation xd xd'
+description: 'Welcome to the home of your new documentation'
 ---
 
 <img
@@ -8,24 +8,24 @@ description: 'Welcome to the home of your new documentation xd xd'
   alt="Infinity Dashboard"
 />
 
-## Setting up
+## Dashboard and user experience
 
 The first step to world-class documentation is setting up your editing environments.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="Dashboard navigation"
+    icon="table-columns"
+    href=""
   >
-    Get your docs set up locally for easy development
+    Learn more about our control center for managing all your products.
   </Card>
   <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
+    title="Product stages"
+    icon="bars-staggered"
+    href=""
   >
-    Preview your changes before you push to make sure they're perfect
+    Optimize your product data with our stage-based workflow.
   </Card>
 </CardGroup>
 
