Getting started ready

--- a/documentation/gettingStarted/resetYourPassword.mdx
+++ b/documentation/gettingStarted/resetYourPassword.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'How to reset your password'
+title: 'Reset your password'
 description: 'Learn how to reset your password in Infinity.'
 ---
 
