--- a/integrations/datasources/dataSources.mdx
+++ b/integrations/datasources/dataSources.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Integrations with data sources'
+title: 'Data sources integrations'
 description: 'Learn all about our connections with distributors.'
 ---
 
