--- a/documentation/gettingStarted/createAnAccount.mdx
+++ b/documentation/gettingStarted/createAnAccount.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'How to create an account'
+title: 'Create an account'
 description: 'Learn how to successfully create your Infinity account.'
 ---
 
