--- a/integrations/channels/salesChannels.mdx
+++ b/integrations/channels/salesChannels.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Integrations with sales channels'
+title: 'Sales channels integrations'
 description: 'Learn how to integrate your store with your sales channels.'
 ---
 
