--- a/documentation/gettingStarted/dashboardNavigation.mdx
+++ b/documentation/gettingStarted/dashboardNavigation.mdx
@@ -5,7 +5,7 @@ description: 'Explore all the data available for you to view in our dashboard.'
 
 Our platform features an optimized dashboard, so you can keep control of your products, see your current numbers, and have timely tracking of all your data currently managed on our platform. In the following article, we will break down all the sections, fields, and accesses you will find on our dashboard:
 
-## Section #1: Live Statistics
+## Section 1: Live Statistics
 
 In this section, you'll find a table that will provide you with various numbers offering valuable insights for timely monitoring of important points related to the products you manage on our platform. Such data includes:
 
@@ -14,13 +14,14 @@ In this section, you'll find a table that will provide you with various numbers 
 - No distributors: This counter will tell you how many of the products currently on our platform do not have any linked data source, meaning the product does not have any linked distributor nor is it in your inventory system, so it does not have any active data source.
 - Completed: This counter will give you the total number of products on your platform that are in our **'Completed'** stage, which, if set up with your e-commerce, will be automatically published on your website.
 
-## Section #2: Summary
+## Section 2: Summary
 
 In this section, you will find various key counters related to storage and total data that your store currently has within our platform.
 
 Keep in mind that these counters are purely informational for your store, as our platform does not set any type of limit or extra cost for the storage or management of your store's data.
 
 ### Such counters are as follows:
+
 - All products: This counter will let you know the total number of products you currently have created in your store.
 - All channels: This counter contains the total number of sales channels you have connected and active with your store within our platform.
 - All data sources: This counter will tell you the total number of distributors you currently have linked with your store.
@@ -28,24 +29,25 @@ Keep in mind that these counters are purely informational for your store, as our
 - All categories: This counter will reflect the total number of categories you have created in your store. This counts all the separate categories that have been created in your store.
 - All users: This counter will let you know how many users you currently have invited to collaborate in your store.
 
-## Section #3: Last activity
+## Section 3: Last activity
 
 This section will show you a list of the last five actions carried out in your store in detail.
 
 ### This list includes relevant information such as:
+
 - The type of action.
 - The name of the user who performs the action with the action.
 - The date and time of the action.
 
 This way, you can see, in detail and currently, the most recent actions carried out on the data of your products on our platform, allowing you to take quick actions upon seeing the last hour in which some activity was carried out on your products.
 
-## Section #4: Last products completed
+## Section 4: Last products completed
 
 In this section, you will have a report with the last six products that were sent from our **'Revision'** stage to **'Completed'**.
 
 This table will have a preview of the main image of the products, the SKU, a preview of the title, and will also have an **'Edit'** button, which allows you to go to the selected product's editing card to validate its details.
 
-## Section #5: Stages
+## Section 5: Stages
 
 In this section, you will find direct access to all the stages of our platform, both those that make up our workflow and the complementary ones.
 
@@ -53,7 +55,7 @@ Each of these stages will be separated into the same chart where you can see all
 
 You can learn more about each of our product stages, how they work, and what data each requires in our article **'Product stages'**.
 
-## Section #6: Today’s movements
+## Section 6: Today’s movements
 
 In this section, you will have a table with all the actions per user that have been carried out on the day in each of the stages of our platform.
 
