--- a/documentation/gettingStarted/dashboardNavigation.mdx
+++ b/documentation/gettingStarted/dashboardNavigation.mdx
@@ -9,10 +9,10 @@ Our platform features an optimized dashboard, so you can keep control of your pr
 
 In this section, you'll find a table that will provide you with various numbers offering valuable insights for timely monitoring of important points related to the products you manage on our platform. Such data includes:
 
-- In stock: In this field, you will find the total number of products on our platform that currently have active stock for sale on your sales channels, whether they have data sources from distributors or any data source connected to your external inventory system.
-- No stock: Related to the previous field, this counter will show you how many of your products on our platform currently do not have stock. Keep in mind that there may be products that, although they have a data source from one of your distributors, this same may not have stock for their products, so it will likewise be counted as not having stock for sale on your sales channels.
-- No distributors: This counter will tell you how many of the products currently on our platform do not have any linked data source, meaning the product does not have any linked distributor nor is it in your inventory system, so it does not have any active data source.
-- Completed: This counter will give you the total number of products on your platform that are in our **'Completed'** stage, which, if set up with your e-commerce, will be automatically published on your website.
+- **In stock:** In this field, you will find the total number of products on our platform that currently have active stock for sale on your sales channels, whether they have data sources from distributors or any data source connected to your external inventory system.
+- **No stock:** Related to the previous field, this counter will show you how many of your products on our platform currently do not have stock. Keep in mind that there may be products that, although they have a data source from one of your distributors, this same may not have stock for their products, so it will likewise be counted as not having stock for sale on your sales channels.
+- **No distributors:** This counter will tell you how many of the products currently on our platform do not have any linked data source, meaning the product does not have any linked distributor nor is it in your inventory system, so it does not have any active data source.
+- **Completed:** This counter will give you the total number of products on your platform that are in our **'Completed'** stage, which, if set up with your e-commerce, will be automatically published on your website.
 
 ## Section 2: Summary
 
@@ -22,12 +22,12 @@ Keep in mind that these counters are purely informational for your store, as our
 
 ### Such counters are as follows:
 
-- All products: This counter will let you know the total number of products you currently have created in your store.
-- All channels: This counter contains the total number of sales channels you have connected and active with your store within our platform.
-- All data sources: This counter will tell you the total number of distributors you currently have linked with your store.
-- All brands: This counter will tell you the total number of brands you have created and stored in your store.
-- All categories: This counter will reflect the total number of categories you have created in your store. This counts all the separate categories that have been created in your store.
-- All users: This counter will let you know how many users you currently have invited to collaborate in your store.
+- **All products:** This counter will let you know the total number of products you currently have created in your store.
+- **All channels:** This counter contains the total number of sales channels you have connected and active with your store within our platform.
+- **All data sources:** This counter will tell you the total number of distributors you currently have linked with your store.
+- **All brands:** This counter will tell you the total number of brands you have created and stored in your store.
+- **All categories:** This counter will reflect the total number of categories you have created in your store. This counts all the separate categories that have been created in your store.
+- **All users:** This counter will let you know how many users you currently have invited to collaborate in your store.
 
 ## Section 3: Last activity
 
