--- a/docs/administration/edit-user-profile.mdx
+++ b/docs/administration/edit-user-profile.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'How to edit my user profile'
+title: 'Edit user profile'
 description: 'Learn how to modify your profile details within your account.'
 ---
 
