--- a/docs/administration/infinity-subscription.mdx
+++ b/docs/administration/infinity-subscription.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'How subscriptions work'
+title: 'Infinity subscription'
 description: 'Learn how to easily manage your subscription.'
 ---
 
