--- a/docs/administration/multi-stores-management.mdx
+++ b/docs/administration/multi-stores-management.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Managing multi-stores'
+title: 'Multi-stores management'
 description: 'Discover how to manage multiple stores using our platform.'
 ---
 
