--- a/docs/administration/request-a-new-feature.mdx
+++ b/docs/administration/request-a-new-feature.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'How to request a new feature'
+title: 'Request a new feature'
 description: 'Request any essential function that you need in our platform.'
 ---
 
