--- a/docs/administration/user-roles-creation.mdx
+++ b/docs/administration/user-roles-creation.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'How to create roles?'
+title: 'User roles creation'
 description: 'Explore the creation of custom roles for store access.'
 ---
 
