--- a/docs/administration/users-management.mdx
+++ b/docs/administration/users-management.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'User management'
+title: 'Users management'
 description: 'Discover how to provide the right level of access to your store.'
 ---
 
