--- a/docs/first-steps/migrate-to-infinity.mdx
+++ b/docs/first-steps/migrate-to-infinity.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'How to import products'
+title: 'Migrate to Infinity'
 description: 'Learn all about importing data on our platform.'
 ---
 
