--- a/docs/administration/stores-creation.mdx
+++ b/docs/administration/stores-creation.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Create a new store'
+title: 'Stores creation'
 description: 'Learn how to create and manage a new store in your organization.'
 ---
 
