--- a/docs/administration/user-roles.mdx
+++ b/docs/administration/user-roles.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'How do roles work?'
+title: 'User roles'
 description: 'Assign specific roles to users for granular access to your store.'
 ---
 
