--- a/docs/first-steps/account-creation.mdx
+++ b/docs/first-steps/account-creation.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Create an account'
+title: 'Account creation'
 description: 'Learn how to successfully create your Infinity account.'
 ---
 
