--- a/docs/administration/request-a-new-feature.mdx
+++ b/docs/administration/request-a-new-feature.mdx
@@ -9,9 +9,17 @@ Our platform constantly works to adapt to any market and type of company that im
 
 Step-by-step process to request a new functionality on our platform:
 
-- Step 1. Identify the functionalities needed to manage your products: Evaluate the needs of your business, both short and long term, and verify if the main functionalities required for the correct management of your product data and for your business are currently implemented on our platform or not. You can learn more about the functionalities we currently have implemented for our products in our article **'Product editing page'**
-- Step 2. Send an integration request: If, after analyzing your business needs, we do not have the functionality in your product data required for your store currently implemented, you simply have to go to our Help Center and locate the **'Open a ticket'** button at the top right. This will open a modal where you can complete your request. In this request, you should only refer to the subject **'Request for new functionality'** and in the message, provide all the necessary details about the new implementation you require on our platform, such as at the product level what it is for, what needs to change or be reflected in the product, or any information that helps us to optimize its analysis, development, and implementation on our platform.
-- Step 3. Wait for our confirmation and development: Once we have received your request for the new functionality to be implemented on our platform, our team will analyze the possibilities of this new function and respond to your request with an update on whether it can be developed or not.
+<Steps>
+    <Step title="Identify the functionalities needed to manage your products">
+    Evaluate the needs of your business, both short and long term, and verify if the main functionalities required for the correct management of your product data and for your business are currently implemented on our platform or not. You can learn more about the functionalities we currently have implemented for our products in our article **'Product editing page'**
+    </Step>
+    <Step title="Send an integration request">
+    If, after analyzing your business needs, we do not have the functionality in your product data required for your store currently implemented, you simply have to go to our Help Center and locate the **'Open a ticket'** button at the top right. This will open a modal where you can complete your request. In this request, you should only refer to the subject **'Request for new functionality'** and in the message, provide all the necessary details about the new implementation you require on our platform, such as at the product level what it is for, what needs to change or be reflected in the product, or any information that helps us to optimize its analysis, development, and implementation on our platform.
+    </Step>
+    <Step title="Wait for our confirmation and development"
+    Once we have received your request for the new functionality to be implemented on our platform, our team will analyze the possibilities of this new function and respond to your request with an update on whether it can be developed or not.
+    </Step>
+</Steps>
 
 In the event that you receive our confirmation that we will begin to develop this new function, within a couple of weeks, you will have this functionality correctly implemented on our platform. With this, you will only have to go to the product editing form to be able to develop all your products with this new implementation.
 
