--- a/docs/administration/request-a-new-feature.mdx
+++ b/docs/administration/request-a-new-feature.mdx
@@ -16,7 +16,7 @@ Step-by-step process to request a new functionality on our platform:
     <Step title="Send an integration request">
     If, after analyzing your business needs, we do not have the functionality in your product data required for your store currently implemented, you simply have to go to our Help Center and locate the **'Open a ticket'** button at the top right. This will open a modal where you can complete your request. In this request, you should only refer to the subject **'Request for new functionality'** and in the message, provide all the necessary details about the new implementation you require on our platform, such as at the product level what it is for, what needs to change or be reflected in the product, or any information that helps us to optimize its analysis, development, and implementation on our platform.
     </Step>
-    <Step title="Wait for our confirmation and development"
+    <Step title="Wait for our confirmation and development">
     Once we have received your request for the new functionality to be implemented on our platform, our team will analyze the possibilities of this new function and respond to your request with an update on whether it can be developed or not.
     </Step>
 </Steps>
